<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/add_dialog_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/textHeading">

            <ImageView
                android:id="@+id/add_dialog_calenderIcon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentStart="true"
                android:src="@drawable/ic_nav_fees"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                app:tint="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/add_dialog_calenderIcon"
                android:gravity="start|center"
                android:minHeight="40dp"
                android:padding="5dp"
                android:text="@string/discount"
                android:textColor="@color/white"
                android:textSize="@dimen/primaryText"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/add_dialog_crossIcon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_close"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:padding="5dp"
                app:tint="@color/white" />

        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:baselineAligned="false"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textStyle="bold"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/textHeading"
                    android:textSize="@dimen/secondaryText"/>


                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/paymentid"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/textHeading"
                    android:textSize="@dimen/secondaryText"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/feesdiscount"
                    android:gravity="center"
                    android:textColor="@color/textHeading"
                    android:textSize="@dimen/secondaryText"
                    android:textStyle="bold"
                    android:layout_marginEnd="5dp"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/value"
                    android:gravity="center"
                    android:textColor="@color/textHeading"
                    android:textSize="@dimen/secondaryText"
                    android:textStyle="bold"
                    android:layout_marginEnd="5dp"
                    />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.4dp"
                android:layout_marginTop="5dp"
                android:background="@color/seperator"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/nodata_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/noData"
                android:visibility="gone"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/redDanger"
                android:gravity="center"
                />


        </LinearLayout>
    </LinearLayout>


</LinearLayout>